// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot Registrar > Polkadot Registrar > pallet registrar - registration functions > alice duplicate para register failed event 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x01000000",
          "index": 70,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 9000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Registrar > Polkadot Registrar > pallet registrar - registration functions > bob para deregister failed event 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Registrar > Polkadot Registrar > pallet registrar - registration functions > bob para register failed event 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x02000000",
          "index": 70,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 9000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Registrar > Polkadot Registrar > pallet registrar - registration functions > registrar register events 1`] = `
[
  {
    "data": {
      "manager": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "method": "Registered",
    "section": "registrar",
  },
]
`;

exports[`Polkadot Registrar > Polkadot Registrar > pallet registrar - registration functions > registrar reserve events 1`] = `
[
  {
    "data": {
      "who": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "method": "Reserved",
    "section": "registrar",
  },
]
`;
